Name:          network-transport-uphere
Version:       0.0
Cabal-Version: >=1.10
Build-Type:    Simple
License:       BSD3
License-file:  LICENSE
Copyright:     Well-Typed LLP, Tweag I/O Limited, UpHere Inc
Author:        Duncan Coutts, Nicolas Wu, Edsko de Vries, Ian-Woo Kim
maintainer:    Ian-Woo Kim <ian@uphere.ai>
Stability:     experimental
Homepage:      http://haskell-distributed.github.com
Bug-Reports:   https://cloud-haskell.atlassian.net/browse/NTTCP
Synopsis:      UpHere specific network transport
Description:   UpHere specific network transport
Tested-With:   GHC==7.6.3 GHC==7.8.4 GHC==7.10.3
Category:      Network
extra-source-files: ChangeLog

Source-Repository head
  Type:     git
  Location: https://github.com/uphere-co/network-transport-uphere

Library
  Build-Depends:   base >= 4.3 && < 5,
                   network-transport >= 0.4.1.0 && < 0.5,
                   data-accessor >= 0.2 && < 0.3,
                   containers >= 0.4 && < 0.6,
                   bytestring >= 0.9 && < 0.11,
                   network >= 2.6.2 && < 2.7
  Exposed-modules: Network.Transport.UpHere,
                   Network.Transport.UpHere.Internal
  Default-Extensions: CPP
  default-language: Haskell2010
  Other-Extensions:   RecursiveDo
  ghc-options:     -Wall -fno-warn-unused-do-bind
  HS-Source-Dirs:  src

Executable server
  Main-is:         server.hs
  hs-source-dirs:  exe
  ghc-options:     -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -auto-all
  build-depends:   base,
                   containers,
                   either,
                   network-transport,
                   --
                   network-transport-uphere
                   
Executable client
  Main-is:         client.hs
  hs-source-dirs:  exe
  ghc-options:     -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -auto-all
  build-depends:   base,
                   bytestring,
                   network-transport,
                   --
                   network-transport-uphere
                   
